# hlox-proto01

./: README.md  flake.nix  fourmolu.yaml
hlox/: ERROR_RECOVERY_APPROACHES.md  TEST_REFACTORING.md  hlox.cabal  input.txt
hlox/app/: Main.hs
hlox/src/: InterpError.hs
hlox/src/Interp/: Core.hs  ErrorHandler.hs  ReadFile.hs  Repl.hs
hlox/src/Interp/Data/: Lexer.hs  Token.hs
hlox/src/Interp/Lex/: Lexer.hs  Primitives.hs  Trivia.hs
hlox/src/Interp/Lex/Parsers/: Identifier.hs  Number.hs  Operator.hs  String.hs
hlox/test/: LexerSpec.hs  Spec.hs
