cabal-version: 3.14
-- The name of the package.
name: hlox
version: 0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
description: A Haskell implementation of the Lox programming language interpreter from the book "Crafting Interpreters" by Robert Nystrom.
-- The license under which the package is released.
license: BSD-3-Clause
-- The package author(s).
author: shinokun
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: hypatia.tile02021@gmail.com
-- A copyright notice.
-- copyright:
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  exposed-modules:
  build-depends: base ^>=4.20.2.0
  hs-source-dirs: src
  default-language: Haskell2010

executable hlox
  -- Import common warning flags.
  import: warnings
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:
    base ^>=4.20.2.0,
    directory

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: Haskell2010
